# raincloud-py

./: .gitignore  AGENTS.md  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml  codex-release.yml  codex-review.yml  codex-triage.yml
docs/: PRD.md
src/raincloud/: __init__.py  _cloud.py  _core.py  _data.py  _rain.py
tests/: test_raincloud.py
