[project]
name = "raincloud-py"
version = "0.1.0"
description = "Raincloud plots for Python: half-violin + jittered points + boxplot, matplotlib-native."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["visualization", "matplotlib", "raincloud", "violin", "distribution", "statistics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization",
]

# Minimal hard dependencies. Everything else is optional.
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
polars = ["polars>=0.20"]
dev = [
    "pandas>=2.0",
    "polars>=0.20",
    "pytest>=8.0",
    "pytest-mpl>=0.17",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/pengkodammaya/raincloud-py"
Repository = "https://github.com/pengkodammaya/raincloud-py"
Issues = "https://github.com/pengkodammaya/raincloud-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/raincloud"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
